# dune-profiling-analysis

./: .clang-format  .gitignore  CMakeLists.txt  GNUmakefile  apple-clang-m2.txt  atan2.qmd  beamerthemeMFP.sty  benchmark_2024_01_06.txt  custom.css  data_structure_profiling.qmd  data_structures.hh  fast_acos_t.cc  fast_atan.hh  fast_atan_t.cc  fill_functions.cc  fill_functions.hh  functions.R  gcc-12-skylake.txt  ieee_acos.cc  january-2023.qmd  january-2024.qmd  omega_t.cc  operations.cc  operations.hh  paterno-05-03-2024.qmd  paterno-23-01-2024.qmd  paterno-26-02-2024.qmd  pdfastsimpar_performance_analysis.qmd  physics_validation_1.qmd  physics_validation_2.qmd  simphotons_choices.cc  sp2.hh  sp_pairs.hh  sum_functions.cc  sum_functions.hh  vtune_data.csv
